Added objectRegister